--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <input placeholder="10000" id="endInput">
         <span>折现率</span>
         <input placeholder="2.5" id="rateInput">
-        <span>%</span>
+        <span>% Made by Zheng Qinyuan</span>
         <p id="yearInfo"></p>
         <button onclick="draw()">计算</button>
     </body>
